// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card render tests ReviewCard renders correctly 1`] = `
<div
  className="card border-success my-2"
>
  <Row>
    <Column
      offset={10}
      right={true}
      width={2}
    >
      <ThumbNail
        img="https://helenaagustsson.github.io/INFT2002-images/images/star.png"
        small={true}
      />
       2
    </Column>
  </Row>
  <div
    className="card-body pt-0"
  >
    <Row>
      <ColumnCentre
        width={11}
      >
        <h5
          className="card-title"
        >
          "
          review-title" 
           
          <ThumbNail
            img="https://helenaagustsson.github.io/INFT2002-images/images/dice-5.png"
            small={true}
          />
        </h5>
        <h6
          className="card-subtitle mb-2 text-muted"
        >
          Spill: 
          review-subtitle
        </h6>
      </ColumnCentre>
    </Row>
    <Row>
      <ColumnCentre
        width={12}
      >
        <div
          className="card-text"
        >
          review-text... 
        </div>
      </ColumnCentre>
    </Row>
  </div>
</div>
`;

exports[`Full Review Card Full review card renders correctly 1`] = `
<div
  className="card border-success my-2"
>
  <Row>
    <Column
      offset={10}
      right={true}
      width={2}
    >
      <ThumbNail
        img="https://helenaagustsson.github.io/INFT2002-images/images/star.png"
        small={true}
      />
       2
    </Column>
  </Row>
  <div
    className="card-body pt-0"
  >
    <Row>
      <ColumnCentre
        width={11}
      >
        <h5
          className="card-title"
        >
          "
          review-title 
          " - 
          <i>
            undefined 
          </i>
          <ThumbNail
            img="https://helenaagustsson.github.io/INFT2002-images/images/dice-5.png"
            small={true}
          />
        </h5>
        <h6
          className="card-subtitle mb-2 text-muted"
        >
          Spill: 
          review-subtitle
        </h6>
      </ColumnCentre>
    </Row>
    <Row>
      <ColumnCentre
        width={2}
      >
        <ThumbNail
          img="img.png"
        />
      </ColumnCentre>
      <ColumnCentre
        width={9}
      >
        <div
          className="card-text"
        >
          <b>
            <i>
              review-text
            </i>
          </b>
        </div>
      </ColumnCentre>
    </Row>
  </div>
</div>
`;
